kubernetes/production/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      namespace: production
      app: frontend-container
  template:
    metadata:
      labels:
        namespace: production
        app: frontend-container
    spec:
      containers:
      - name: frontend-container
        image: $ECR_ENDPOINT/lumina-images/frontend:$CIRCLE_SHA1
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.3"
        ports:
        - containerPort: 80
