kubernetes/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: production
spec:
  rules:
    - host: lumina.earth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
# ---
# # Custom Ingress Service
# apiVersion: v1
# kind: Service
# metadata:
#   name: drawbridge-ingress-service
# spec:
#   type: NodePort
#   selector:
#     app: drawbridge-ingress-service
#   ports:
#     - name: http
#       nodePort: 30001
#       protocol: TCP
#       port: 30001
#       targetPort: 80
#     - name: https
#       nodePort: 30002
#       protocol: TCP
#       port: 30002
#       targetPort: 443
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: drawbridge-ingress-service
# spec:
#   selector:
#     matchLabels:
#       app: drawbridge-ingress-service
#   template:
#     metadata:
#       labels:
#         app: drawbridge-ingress-service
#     spec:
#       containers:
#         - name: drawbridge-ingress-service
#           image: 319923562419.dkr.ecr.ap-southeast-2.amazonaws.com/ingress-image
#           resources:
#             limits:
#               memory: "40Mi"
#               cpu: "0.3"
#           ports:
#             - containerPort: 80
#             - containerPort: 443
